--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=base64:qsdpEZeb7sc7dElA7rPn/PHdyc/Vyu4wuKjW5s4HT+g=
 
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_DATABASE=laravel_base
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=Jordan
+DB_PASSWORD=123456
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
